# polymarket-ai-market-suggestor

./: ENV.sample  README.md  pyproject.toml  requirements.txt
src/polysuggest/: __init__.py  ai.py  analytics.py  cli.py  config.py  orchestrator.py  polymarket_client.py  reporting.py  schemas.py  storage.py  trend_scanner.py
tests/: test_fallback.py  test_storage.py
